--- a/adv/backend/web/css/chat.css
+++ b/adv/backend/web/css/chat.css
@@ -1,15 +1,29 @@
 #chat-area {
-    width: 600px;
-    height: 300px;
     font-size: 20px;
-    display: block;
     margin-bottom: 10px;
     padding: 10px;
 }
+
 .chat-message {
     width: 600px;
     height: 30px;
     padding: 0 10px;
 }
-.chat-message-send {
+
+.chat-time {
+    color: #999999;
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+    margin-left: 10px;
+}
+
+.chat-author {
+    color: #42648b;
+    font-weight: bold;
+    position: relative;
+}
+
+.chat-img {
+    margin-right: 10px;
 }
